--- a/test.html
+++ b/test.html
@@ -39,7 +39,7 @@
         }).setView([0, 0], 0)
 
         // Add the base tile layer
-        L.tileLayer('https://fnbrmena.com/api/v1/fortnite/map/{z}/{x}/{y}.jpg', {
+        L.tileLayer('https://fnbrmena.com/api/v1/fortnite/map/30.02/{z}/{x}/{y}.jpg', {
             noWrap: true,
             tileSize: 256,
 
